refactor(types): remove `ErrorType`, enhance `TypeSet`, and reorganize methods
- Remove `ErrorType` as it is no longer in use.
- Refactor and restructure `TypeSet` with improved organization and added functionality.
  - Replace `Set` inheritance with a standalone implementation using a private `$types` array.
  - Introduce `add`, `remove`, `clear`, and validation methods for better type management.
  - Add support for nullable types (`?string`) and union type syntax (`string|int`).
  - Implement `Countable` for more intuitive usage.
- Simplify and improve logic in `Type` for more explicit handling of core types, resources, and objects.
- Update TODOs for testing additions.

Signed-off-by: Shaun Moss <shaun@astromultimedia.com>

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,4 +9,5 @@ Collections
 5. Complete tests for collection classes.
 
 Math
-1. Make Complex class into an extension.
+1. Make Complex class into an extension. (maybe later)
+2. Complete tests for Complex class.
